# rut.py

./: README.md  pyproject.toml
.github/workflows/: publish.yml
rut.py/: setup.py
rut.py/core/: rut.py
rutpy/: __init__.py  setup.py
rutpy/core/: rut.py
rutpy/tests/: test_rut.py
